// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если есть крест правильно нарисует компонент 1`] = `
<div
  className="InfoBubble InfoBubble_visible InfoBubble_theme_lightBlue InfoBubble_closer_standart"
>
  <div
    className="InfoBubble__title"
  >
    Проверяйте VIN и госномер перед покупкой
  </div>
  Купите историю автомобиля: она содержит полный VIN и госномер (при наличии). Во время осмотра проверьте, что фактические VIN и госномер совпадают с указанными в истории.
  <CloseButton
    className="InfoBubble__closeButton"
    color="grey"
    form="standart"
    onClick={[Function]}
    outer={false}
    size="s"
    type="block"
  />
</div>
`;

exports[`правильно рисует компонент без заголовка 1`] = `
<div
  className="InfoBubble InfoBubble_visible InfoBubble_theme_lightBlue"
>
  Купите историю автомобиля: она содержит полный VIN и госномер (при наличии). Во время осмотра проверьте, что фактические VIN и госномер совпадают с указанными в истории.
</div>
`;

exports[`правильно рисует компонент с заголовком 1`] = `
<div
  className="InfoBubble InfoBubble_visible InfoBubble_theme_lightBlue"
>
  <div
    className="InfoBubble__title"
  >
    Проверяйте VIN и госномер перед покупкой
  </div>
  Купите историю автомобиля: она содержит полный VIN и госномер (при наличии). Во время осмотра проверьте, что фактические VIN и госномер совпадают с указанными в истории.
</div>
`;
